fix(drawer): header content alignment

--- a/packages/react/src/drawer/src/styles/index.module.scss
+++ b/packages/react/src/drawer/src/styles/index.module.scss
@@ -27,6 +27,10 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+
+    &__content {
+      flex: 1;
+    }
   }
 
   &__body {
